<resources>
    <string name="app_name">MCMA</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>

    <string name="sign_in_underlined"><u>Sign In</u></string>
    <string name="forgot_password_underlined"><u>Forgot password ?</u></string>
    <string name="name_underlined"><u>Name</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terrible">Terrible</string>
    <string name="rating_excellent">Excellent!</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="can_t_book">Can\'t Book</string>
    <string name="are_you_sure_want_to_delete_account">Are you sure you want to delete account?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="unknown_rating">Unknown Rating\n</string>

    <string-array name="gender_array">
        <item>Choose gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <string name="store_title">Cửa hàng</string>
    <string name="select_theater">Chọn rạp để nhận hàng</string>
    <string name="all_theaters">Tất cả các rạp</string>
    <string name="no_data">Chưa có dữ liệu</string>
    <string name="total_price">Tổng tiền (đã bao gồm phụ thu)</string>
    <string name="complete_payment">Hoàn tất thanh toán</string>
    <string name="concession">Concession</string>
    <string name="book_ticket">Booking</string>
    <string name="_0">0$</string>
    <string name="_0_00">$0.00</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="back_button">Back button</string>
    <string name="otp">OTP</string>
    <string name="check">Check</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="don_t_have_an_account_underlined"><u>Don\'t have an account ?</u></string>
    <string name="verify">Verify</string>
    <string name="finish">Finish</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="name">SpotCinema+</string>
    <string name="book_tickets_by_theater">Book Tickets by Theater</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="dash">-</string>
    <string name="movie_name">movie name</string>
    <string name="loading">Loading…</string>
    <string name="spotcinema">SpotCinema+</string>
    <string name="search_icon">search icon</string>
    <string name="menu_icon">menu icon</string>
    <string name="notification_icon">notification icon</string>
    <string name="movie_trailer">movie trailer</string>
    <string name="voting">Voting</string>
    <string name="genre">Genre</string>
    <string name="movie_poster">movie poster</string>
    <string name="expand_collapse">expand collapse</string>
    <string name="home">Home</string>
    <string name="showtimes">Showtimes</string>
    <string name="store">Store</string>
    <string name="feedback">Feedback</string>
    <string name="account">Account</string>
    <string name="total">Total</string>
    <string name="terms_agreement">I have read, understood and agreed with the <u>terms</u></string>
    <!--header-->
    <string name="header_seat_selection">Seat Selection</string>
    <string name="header_audience_type_selection">Audience Type Selection</string>
    <string name="header_concession_selection">Concession Selection</string>
    <!--category-->
    <string name="category_movie_overview">Overview</string>
    <string name="category_movie_release_date">Release date</string>
    <string name="category_movie_rating">Rating</string>
    <string name="category_movie_director">Director</string>
    <string name="category_movie_cast">Cast</string>
    <string name="category_booking_items_ordered">Items Ordered</string>
    <string name="category_booking_total">Total</string>
    <string name="category_payment_methods">Payment Methods</string>
    <!--hint-->
    <string name="hint_cinema_name">cinema_name</string>
    <string name="hint_screen_name_date_duration">screen_name - MMM dd, uuuu HH:mm ~ HH:mm</string>
    <string name="hint_movie_name">movie_name</string>
    <string name="hint_rating_name">R</string>
    <string name="hint_screen_type">IMAX</string>
    <string name="hint_total_audience_count">00 / 00 audiences</string>
    <string name="hint_total_audience">00 audiences</string>
    <string name="hint_total_price">$999.0</string>
    <string name="hint_audience_type">audience_type</string>
    <string name="hint_sum_per_type">$99.0</string>
    <string name="hint_quantity">9</string>
    <string name="hint_text_view">text_view</string>
    <string name="hint_unit_price">$11.0 x</string>
    <string name="hint_total_seat_count">.... seats selected</string>
    <string name="hint_concession_name">concession_name</string>
    <string name="hint_concession_description">concession_description</string>
    <string name="hint_concession_combo_price">Price: $11.0</string>
    <string name="hint_time_remaining">00:00</string>
    <string name="hint_movie_genres">genre01, genre02, genre03, …</string>
    <string name="hint_movie_length">99 min</string>
    <string name="hint_movie_overview">This is a movie.</string>
    <string name="hint_see_more">See more</string>
    <string name="hint_movie_director">John Doe</string>
    <string name="hint_movie_casts">John Doe, Other Doe</string>
    <string name="hint_movie_rating_description">rating_description</string>
    <string name="hint_cinema_name_screen_name">cinema_name - screen_name</string>
    <string name="hint_date_duration">MMM dd, uuuu HH:mm ~ HH:mm</string>
    <string name="hint_items_ordered_summary">9 tickets + 9 concessions</string>
    <string name="hint_item_name">item_name</string>
    <string name="hint_payment_method_description">payment_method_description</string>
    <!--content description-->
    <string name="content_description_decrement">decrement</string>
    <string name="content_description_increment">increment</string>
    <string name="content_description_banner">banner</string>
    <string name="content_description_payment_method_icon">content_description_payment_method_icon</string>
</resources>

