<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">
    <TextView
        android:id="@+id/text_view_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/hint_quantity"
        android:textSize="16sp"
        android:gravity="end"/>
    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:paddingHorizontal="5dp"
        android:text="@string/hint_item_name"
        android:textSize="16sp"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/text_view_total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/hint_total_price"
        android:textSize="16sp"/>
</LinearLayout>
