<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_text_view"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">
        <TextView
            android:id="@+id/text_view_audience_type"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/hint_audience_type"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_view_unit_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/text_view_unit_price"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/hint_unit_price"
            android:textSize="16sp"
            android:gravity="end"
            app:layout_constraintStart_toEndOf="@id/text_view_audience_type"
            app:layout_constraintEnd_toStartOf="@id/button_minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageButton
            android:id="@+id/button_minus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/content_description_decrement"
            android:src="@drawable/ic_minus"
            android:background="@drawable/shape_box"
            app:tint="@color/color_on_secondary" 
            app:layout_constraintStart_toEndOf="@id/text_view_unit_price"
            app:layout_constraintEnd_toStartOf="@id/text_view_audience_type_quantity"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/text_view_audience_type_quantity"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hint_quantity"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/button_minus"
            app:layout_constraintEnd_toStartOf="@id/button_plus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/content_description_increment"
            android:src="@drawable/ic_plus"
            android:background="@drawable/shape_box"
            app:tint="@color/color_on_secondary" 
            app:layout_constraintStart_toEndOf="@id/text_view_audience_type_quantity"
            app:layout_constraintEnd_toStartOf="@id/text_view_sum_per_type"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/text_view_sum_per_type"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/hint_sum_per_type"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/button_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
