<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:background="@color/white"
    tools:context=".frontend.component.account.ForgotPasswordStepOneActivity">

    <!--Header-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@color/LightBlue">
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_left_black"
            android:contentDescription="@string/back_button"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <!--Field-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="25dp">

        <!--Info-->
        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_text_email"/>
        <!-- Email -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_group_box"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--Next Button-->
    <Button
        android:id="@+id/button_next"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/gray_text"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</RelativeLayout>