<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    android:paddingVertical="30dp"
    android:background="@drawable/loading_page_border"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".frontend.component.auth.SignInFragment">
    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/cinemalogo3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"/>
    <!-- Email EditText -->
    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_group_box"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/edit_text_password"/>
    <!-- Password EditText -->
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/edit_group_box"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />
    <!-- Sign in Button -->
    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/gray_text"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in"
        app:layout_constraintBottom_toBottomOf="parent">
        <!-- "Don't have an account?" Text -->
        <TextView
            android:id="@+id/text_view_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_underlined"
            android:textColor="@color/black"
            android:textSize="15sp"/>
        <!-- "Forgot Password" Text -->
        <TextView
            android:id="@+id/text_view_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forgot_password_underlined"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>