<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:background="@color/white"
    tools:context=".frontend.component.account.SignUpStepThreeActivity">

    <!--Header-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@color/LightBlue">
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:background="@drawable/left"
            android:contentDescription="@string/back_button"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <!--Fields-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="25dp">

        <!-- Password -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edit_group_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/edit_text_confirm_password"/>
        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/edit_group_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Finish Button -->
    <Button
        android:id="@+id/button_finish"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/gray_text"
        android:padding="10dp"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</RelativeLayout>