<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.component.bookingprocess.steptwo.AudienceTypeSelectionActivity">
    <!--header-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/schedule_info">
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/ic_left_gray"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/header_audience_type_selection"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/button_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--schedule info-->
    <LinearLayout
        android:id="@+id/schedule_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_audience_type">
        <TextView
            android:id="@+id/text_view_cinema_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_cinema_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/text_view_screen_name_date_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_screen_name_date_duration"
            android:textSize="15sp" />
    </LinearLayout>
    <!--audience type-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_audience_type"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/schedule_info"
        app:layout_constraintBottom_toTopOf="@+id/summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <!--summary-->
    <LinearLayout
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:paddingHorizontal="30dp"
        android:background="@color/booking_summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_audience_type"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">
                <TextView
                    android:id="@+id/text_view_movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_movie_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_view_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="2dp"
                        android:background="@drawable/text_view_rating"
                        android:text="@string/hint_rating_name"
                        android:textSize="14sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:id="@+id/text_view_screen_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_gravity="center_vertical"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="2dp"
                        android:background="@drawable/text_view_screen_type"
                        android:text="@string/hint_screen_type"
                        android:textSize="14sp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/text_view_total_audience_count"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="end"
                        android:text="@string/hint_total_audience_count"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/text_view_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_total_price"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        <vn.edu.usth.mcma.frontend.component.customview.navigate.CustomNavigateButton
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
